<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg_gray"
    android:orientation="vertical" >

    <com.mianshibang.main.widget.TitleBar
        android:id="@+id/title_bar"
        style="@style/TitleBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/classify"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_classify"
                android:maxLength="100" />

            <EditText
                android:id="@+id/from"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/post_from"
                android:maxLength="100" />

            <EditText
                android:id="@+id/description"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/post_description" />

            <EditText
                android:id="@+id/answer"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/post_answer" />

            <EditText
                android:id="@+id/tags"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/post_tags"
                android:maxLength="150" />

            <Button
                android:id="@+id/submit"
                style="@style/login_button"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/post_submit" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_web_hint"
                    android:textColor="#666666"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_web_url"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/post_web_open"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_web_open"
                        android:textColor="@drawable/color_app_selector"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/post_web_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/post_web_copy"
                        android:textColor="@drawable/color_app_selector"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>